grabc: encoding internally to jpeg

--- a/app/grabc/Makefile
+++ b/app/grabc/Makefile
@@ -1,3 +1,22 @@
-grabc: grabc.cc
-	g++ $(CFLAGS) -w grabc.cc -o grabc
+# use pkg-config for getting CFLAGS and LDLIBS
+FFMPEG_LIBS=    libavcodec                         \
+                libswscale                         \
+                
+CFLAGS += -Wall -O2 -g
+CFLAGS := $(shell pkg-config --cflags $(FFMPEG_LIBS)) $(CFLAGS)
+LDLIBS := $(shell pkg-config --libs $(FFMPEG_LIBS)) $(LDLIBS)
+
+EXAMPLES=       encoding                  
+
+OBJS=$(addsuffix .o,$(EXAMPLES))
+
+# the following examples make explicit use of the math library
+encoding: LDLIBS += -lm
+
+grabc: grab.c encode.c
+	gcc -w grab.c encode.c -o grabc $(CFLAGS) $(LDLIBS)
+
+
+
+
 
