using socket.io rooms to control connected sockets

--- a/app/config/nodeminderjs.conf
+++ b/app/config/nodeminderjs.conf
@@ -1,7 +1,6 @@
 {
-    "cameras": [
-        {
-            "id": 1,
+    "cameras": {
+        "01": {
             "descr": "IT camera 1",
             "type": "local",
             "device": "/dev/video0",
@@ -12,8 +11,7 @@
             "height": 240,
             "fps": 3
         },
-        {
-            "id": 2,
+        "02": {
             "descr": "IT camera 2",
             "type": "local",
             "device": "/dev/video1",
@@ -24,5 +22,5 @@
             "height": 240,
             "fps": 3
         }
-    ]
+    }
 }
