multichannel card ok

--- a/app/config/nodeminderjs.conf
+++ b/app/config/nodeminderjs.conf
@@ -12,7 +12,13 @@
             "palette": "BGR24",
             "width": 320,
             "height": 240,
-            "fps": 3
+            "fps": 3,
+            "recording": {
+                "change_detect": {
+                    "pixel_limit": 7,  
+                    "image_limit": 3
+                }
+            }
         },
         "02": {
             "descr": "IT camera 2",
@@ -23,7 +29,64 @@
             "palette": "BGR24",
             "width": 320,
             "height": 240,
-            "fps": 3
+            "fps": 3,
+            "recording": {
+                "change_detect": {
+                    "pixel_limit": 15,
+                    "image_limit": 10
+                }
+            }
+        },
+        "03": {
+            "descr": "IT camera 3",
+            "type": "local",
+            "device": "/dev/video2",
+            "channel": 0,
+            "format": "NTSC",
+            "palette": "BGR24",
+            "width": 320,
+            "height": 240,
+            "fps": 3,
+            "recording": {
+                "change_detect": {
+                    "pixel_limit": -1,
+                    "image_limit": -1
+                }
+            }
+        },
+        "04": {
+            "descr": "hallway",
+            "type": "local",
+            "device": "/dev/video3",
+            "channel": 0,
+            "format": "NTSC",
+            "palette": "BGR24",
+            "width": 320,
+            "height": 240,
+            "fps": 3,
+            "recording": {
+                "change_detect": {
+                    "pixel_limit": -1,
+                    "image_limit": -1
+                }
+            }
+        },
+        "05": {
+            "descr": "cam 05",
+            "type": "local",
+            "device": "/dev/video0",
+            "channel": 1,
+            "format": "NTSC",
+            "palette": "BGR24",
+            "width": 320,
+            "height": 240,
+            "fps": 3,
+            "recording": {
+                "change_detect": {
+                    "pixel_limit": -1,
+                    "image_limit": -1
+                }
+            }
         }
     }
 }
