camera view and grid adjusts

--- a/app/config/nodeminderjs.conf
+++ b/app/config/nodeminderjs.conf
@@ -15,8 +15,8 @@
             "fps": 3,
             "recording": {
                 "change_detect": {
-                    "pixel_limit": 7,  
-                    "image_limit": 3
+                    "pixel_limit": -1,  
+                    "image_limit": -1
                 }
             }
         },
@@ -32,8 +32,8 @@
             "fps": 3,
             "recording": {
                 "change_detect": {
-                    "pixel_limit": 15,
-                    "image_limit": 10
+                    "pixel_limit": 6,
+                    "image_limit": 2
                 }
             }
         },
@@ -55,7 +55,7 @@
             }
         },
         "04": {
-            "descr": "hallway",
+            "descr": "front door",
             "type": "local",
             "device": "/dev/video3",
             "channel": 0,
@@ -63,16 +63,16 @@
             "palette": "BGR24",
             "width": 320,
             "height": 240,
-            "fps": 3,
+            "fps": 1,
             "recording": {
                 "change_detect": {
-                    "pixel_limit": -1,
-                    "image_limit": -1
+                    "pixel_limit": 6,
+                    "image_limit": 2
                 }
             }
         },
         "05": {
-            "descr": "cam 05",
+            "descr": "my table",
             "type": "local",
             "device": "/dev/video0",
             "channel": 1,
@@ -80,11 +80,11 @@
             "palette": "BGR24",
             "width": 320,
             "height": 240,
-            "fps": 3,
+            "fps": 1,
             "recording": {
                 "change_detect": {
-                    "pixel_limit": -1,
-                    "image_limit": -1
+                    "pixel_limit": 6,
+                    "image_limit": 2
                 }
             }
         }
