grid and view ok

--- a/app/config/nodeminderjs.conf
+++ b/app/config/nodeminderjs.conf
@@ -1,6 +1,9 @@
 {
     "server": {
-        "port": 8080
+        "port": 8080,
+        "recording": {
+            "events_dir": "/var/nodeminderjs/events/"
+        }
     },
     "cameras": {
         "01": {
@@ -14,9 +17,10 @@
             "height": 240,
             "fps": 3,
             "recording": {
+                "on": 0,
                 "change_detect": {
-                    "pixel_limit": 8,  
-                    "image_limit": 4
+                    "pixel_limit": 9,  
+                    "image_limit": 5
                 }
             }
         },
@@ -31,6 +35,7 @@
             "height": 240,
             "fps": 3,
             "recording": {
+                "on": 0,
                 "change_detect": {
                     "pixel_limit": 6,
                     "image_limit": 2
@@ -48,6 +53,7 @@
             "height": 240,
             "fps": 3,
             "recording": {
+                "on": 0,
                 "change_detect": {
                     "pixel_limit": 6,
                     "image_limit": 2
@@ -63,8 +69,9 @@
             "palette": "BGR24",
             "width": 320,
             "height": 240,
-            "fps": 1,
+            "fps": 2,
             "recording": {
+                "on": 1,
                 "change_detect": {
                     "pixel_limit": 6,
                     "image_limit": 2
@@ -80,8 +87,9 @@
             "palette": "BGR24",
             "width": 320,
             "height": 240,
-            "fps": 1,
+            "fps": 2,
             "recording": {
+                "on": 1,
                 "change_detect": {
                     "pixel_limit": 6,
                     "image_limit": 2
