video recording ok

--- a/app/config/nodeminderjs.conf
+++ b/app/config/nodeminderjs.conf
@@ -1,9 +1,9 @@
 {
     "server": {
-        "port": 8080,
-        "recording": {
-            "events_dir": "/var/nodeminderjs/events/"
-        }
+        "port": 8080
+    },
+    "events": {
+        "dir": "/var/nodeminderjs/events/"
     },
     "cameras": {
         "01": {
@@ -17,7 +17,7 @@
             "height": 240,
             "fps": 3,
             "recording": {
-                "on": 0,
+                "rec_on": 0,
                 "change_detect": {
                     "pixel_limit": 9,  
                     "image_limit": 5
@@ -35,7 +35,7 @@
             "height": 240,
             "fps": 3,
             "recording": {
-                "on": 0,
+                "rec_on": 0,
                 "change_detect": {
                     "pixel_limit": 6,
                     "image_limit": 2
@@ -53,7 +53,7 @@
             "height": 240,
             "fps": 3,
             "recording": {
-                "on": 0,
+                "rec_on": 0,
                 "change_detect": {
                     "pixel_limit": 6,
                     "image_limit": 2
@@ -69,9 +69,9 @@
             "palette": "BGR24",
             "width": 320,
             "height": 240,
-            "fps": 2,
+            "fps": 3,
             "recording": {
-                "on": 1,
+                "rec_on": 1,
                 "change_detect": {
                     "pixel_limit": 6,
                     "image_limit": 2
@@ -87,12 +87,12 @@
             "palette": "BGR24",
             "width": 320,
             "height": 240,
-            "fps": 2,
+            "fps": 3,
             "recording": {
-                "on": 1,
+                "rec_on": 1,
                 "change_detect": {
-                    "pixel_limit": 6,
-                    "image_limit": 2
+                    "pixel_limit": 7,
+                    "image_limit": 3
                 }
             }
         }
