--- a/app/config/nodeminderjs.conf
+++ b/app/config/nodeminderjs.conf
@@ -1,9 +1,24 @@
 {
     "server": {
-        "port": 8080
+        "port": 8080,
+        "name": "01"
     },
+    "other_servers": [
+        {
+            "url": "http://192.168.1.181:4040/",
+            "name": "02"
+        }
+    ],
     "events": {
         "dir": "/var/nodeminderjs/events/"
+    },
+    "custom": {
+        "dir":  "/var/nodeminderjs/custom/",
+        "grid": "/var/nodeminderjs/custom/grid/"
+    },
+    "devices": {
+        "captures_per_frame": 2,
+        "buffers_per_input": 4
     },
     "cameras": {
         "01": {
@@ -15,17 +30,19 @@
             "palette": "BGR24",
             "width": 320,
             "height": 240,
-            "fps": 2,
+            "fps": 4,
+            "remote_fps": 1,
             "recording": {
                 "rec_on": 0,
+                "rec_fps": 2,
                 "change_detect": {
-                    "pixel_limit": 7,  
-                    "image_limit": 3
+                    "pixel_limit": 10,  
+                    "image_limit": 4
                 }
             }
         },
         "02": {
-            "descr": "IT camera 2",
+            "descr": "Camera 2",
             "type": "local",
             "device": "/dev/video1",
             "channel": 0,
@@ -33,17 +50,19 @@
             "palette": "BGR24",
             "width": 320,
             "height": 240,
-            "fps": 3,
+            "fps": 1.5,
+            "remote_fps": 1,
             "recording": {
-                "rec_on": 0,
+                "rec_on": 1,
+                "rec_fps": 1,
                 "change_detect": {
-                    "pixel_limit": 6,
-                    "image_limit": 2
+                    "pixel_limit": 10,  
+                    "image_limit": 6
                 }
             }
         },
         "03": {
-            "descr": "IT camera 3",
+            "descr": "Camera 3",
             "type": "local",
             "device": "/dev/video2",
             "channel": 0,
@@ -51,17 +70,19 @@
             "palette": "BGR24",
             "width": 320,
             "height": 240,
-            "fps": 3,
+            "fps": 4,
+            "remote_fps": 1,
             "recording": {
                 "rec_on": 0,
+                "rec_fps": 2,
                 "change_detect": {
-                    "pixel_limit": 6,
-                    "image_limit": 2
+                    "pixel_limit": -1,  
+                    "image_limit": -1
                 }
             }
         },
         "04": {
-            "descr": "front door",
+            "descr": "Camera 4",
             "type": "local",
             "device": "/dev/video3",
             "channel": 0,
@@ -69,17 +90,19 @@
             "palette": "BGR24",
             "width": 320,
             "height": 240,
-            "fps": 3,
+            "fps": 4,
+            "remote_fps": 1,
             "recording": {
-                "rec_on": 1,
+                "rec_on": 0,
+                "rec_fps": 2,
                 "change_detect": {
-                    "pixel_limit": 6,
-                    "image_limit": 2
+                    "pixel_limit": -1,  
+                    "image_limit": -1
                 }
             }
         },
         "05": {
-            "descr": "my table",
+            "descr": "My table",
             "type": "local",
             "device": "/dev/video0",
             "channel": 1,
@@ -87,14 +110,236 @@
             "palette": "BGR24",
             "width": 320,
             "height": 240,
-            "fps": 3,
+            "fps": 4,
+            "remote_fps": 1,
+            "recording": {
+                "rec_on": 2,
+                "rec_fps": 2,
+                "change_detect": {
+                    "pixel_limit": 11,
+                    "image_limit": 6
+                }
+            }
+        },
+        "06": {
+            "descr": "IT camera 2",
+            "type": "local",
+            "device": "/dev/video1",
+            "channel": 1,
+            "format": "NTSC",
+            "palette": "BGR24",
+            "width": 320,
+            "height": 240,
+            "fps": 4,
+            "remote_fps": 1,
+            "recording": {
+                "rec_on": 2,
+                "rec_fps": 2,
+                "change_detect": {
+                    "pixel_limit": 18,
+                    "image_limit": 11
+                }
+            }
+        },
+        "07": {
+            "descr": "Camera 7",
+            "type": "local",
+            "device": "/dev/video2",
+            "channel": 1,
+            "format": "NTSC",
+            "palette": "BGR24",
+            "width": 320,
+            "height": 240,
+            "fps": 4,
+            "remote_fps": 1,
+            "recording": {
+                "rec_on": 0,
+                "rec_fps": 2,
+                "change_detect": {
+                    "pixel_limit": -1,
+                    "image_limit": -1
+                }
+            }
+        },
+        "08": {
+            "descr": "Camera 8",
+            "type": "local",
+            "device": "/dev/video3",
+            "channel": 1,
+            "format": "NTSC",
+            "palette": "BGR24",
+            "width": 320,
+            "height": 240,
+            "fps": 4,
+            "remote_fps": 1,
+            "recording": {
+                "rec_on": 0,
+                "rec_fps": 2,
+                "change_detect": {
+                    "pixel_limit": -1,
+                    "image_limit": -1
+                }
+            }
+        },
+        "09": {
+            "descr": "Rack",
+            "type": "local",
+            "device": "/dev/video0",
+            "channel": 2,
+            "format": "NTSC",
+            "palette": "BGR24",
+            "width": 320,
+            "height": 240,
+            "fps": 4,
+            "remote_fps": 1,
+            "recording": {
+                "rec_on": 0,
+                "rec_fps": 2,
+                "change_detect": {
+                    "pixel_limit": 12,
+                    "image_limit": 8
+                }
+            }
+        },
+        "10": {
+            "descr": "Camera 10",
+            "type": "local",
+            "device": "/dev/video1",
+            "channel": 2,
+            "format": "NTSC",
+            "palette": "BGR24",
+            "width": 320,
+            "height": 240,
+            "fps": 4,
+            "remote_fps": 1,
+            "recording": {
+                "rec_on": 0,
+                "rec_fps": 2,
+                "change_detect": {
+                    "pixel_limit": 9,
+                    "image_limit": 5
+                }
+            }
+        },
+        "11": {
+            "descr": "Camera 11",
+            "type": "local",
+            "device": "/dev/video2",
+            "channel": 2,
+            "format": "NTSC",
+            "palette": "BGR24",
+            "width": 320,
+            "height": 240,
+            "fps": 4,
+            "remote_fps": 1,
+            "recording": {
+                "rec_on": 0,
+                "rec_fps": 2,
+                "change_detect": {
+                    "pixel_limit": -1,
+                    "image_limit": -1
+                }
+            }
+        },
+        "12": {
+            "descr": "Camera 12",
+            "type": "local",
+            "device": "/dev/video3",
+            "channel": 2,
+            "format": "NTSC",
+            "palette": "BGR24",
+            "width": 320,
+            "height": 240,
+            "fps": 4,
+            "remote_fps": 1,
+            "recording": {
+                "rec_on": 0,
+                "rec_fps": 2,
+                "change_detect": {
+                    "pixel_limit": -1,
+                    "image_limit": -1
+                }
+            }
+        },
+        "13": {
+            "descr": "Front door",
+            "type": "local",
+            "device": "/dev/video0",
+            "channel": 3,
+            "format": "NTSC",
+            "palette": "BGR24",
+            "width": 320,
+            "height": 240,
+            "fps": 4,
+            "remote_fps": 1,
             "recording": {
                 "rec_on": 1,
+                "rec_fps": 2,
                 "change_detect": {
                     "pixel_limit": 7,
                     "image_limit": 3
                 }
             }
-        }
+        },       
+        "14": {
+            "descr": "Camera 14",
+            "type": "local",
+            "device": "/dev/video1",
+            "channel": 3,
+            "format": "NTSC",
+            "palette": "BGR24",
+            "width": 320,
+            "height": 240,
+            "fps": 4,
+            "remote_fps": 1,
+            "recording": {
+                "rec_on": 0,
+                "rec_fps": 2,
+                "change_detect": {
+                    "pixel_limit": -1,
+                    "image_limit": -1
+                }
+            }
+        },        
+        "15": {
+            "descr": "Camera 15",
+            "type": "local",
+            "device": "/dev/video2",
+            "channel": 3,
+            "format": "NTSC",
+            "palette": "BGR24",
+            "width": 320,
+            "height": 240,
+            "fps": 4,
+            "remote_fps": 1,
+            "recording": {
+                "rec_on": 0,
+                "rec_fps": 2,
+                "change_detect": {
+                    "pixel_limit": -1,
+                    "image_limit": -1
+                }
+            }
+        },
+        "16": {
+            "descr": "Camera 16",
+            "type": "local",
+            "device": "/dev/video3",
+            "channel": 3,
+            "format": "NTSC",
+            "palette": "BGR24",
+            "width": 320,
+            "height": 240,
+            "fps": 4,
+            "remote_fps": 1,
+            "recording": {
+                "rec_on": 0,
+                "rec_fps": 2,
+                "change_detect": {
+                    "pixel_limit": -1,
+                    "image_limit": -1
+                }
+            }
+        }        
     }
 }
