--- a/app/config/nodeminderjs.conf
+++ b/app/config/nodeminderjs.conf
@@ -16,6 +16,9 @@
         "dir":  "/var/nodeminderjs/custom/",
         "grid": "/var/nodeminderjs/custom/grid/"
     },
+    "registry": {
+        "dir": "/var/nodeminderjs/registry/"
+    },
     "devices": {
         "captures_per_frame": 2,
         "buffers_per_input": 4
@@ -32,12 +35,17 @@
             "height": 240,
             "fps": 4,
             "remote_fps": 1,
+            "registry": {
+                "reg_on": 1,
+                "entities": ["entregador"]
+            },
+            "alarm": 0,
             "recording": {
                 "rec_on": 0,
                 "rec_fps": 2,
                 "change_detect": {
-                    "pixel_limit": 10,  
-                    "image_limit": 4
+                    "pixel_limit": 16,  
+                    "image_limit": 9
                 }
             }
         },
@@ -52,12 +60,17 @@
             "height": 240,
             "fps": 1.5,
             "remote_fps": 1,
+            "registry": {
+                "reg_on": 0,
+                "entities": []
+            },
+            "alarm": 1,
             "recording": {
                 "rec_on": 1,
                 "rec_fps": 1,
                 "change_detect": {
-                    "pixel_limit": 10,  
-                    "image_limit": 6
+                    "pixel_limit": 12,  
+                    "image_limit": 7
                 }
             }
         },
@@ -72,6 +85,11 @@
             "height": 240,
             "fps": 4,
             "remote_fps": 1,
+            "registry": {
+                "reg_on": 0,
+                "entities": []
+            },
+            "alarm": 0,
             "recording": {
                 "rec_on": 0,
                 "rec_fps": 2,
@@ -92,6 +110,11 @@
             "height": 240,
             "fps": 4,
             "remote_fps": 1,
+            "registry": {
+                "reg_on": 0,
+                "entities": []
+            },
+            "alarm": 0,
             "recording": {
                 "rec_on": 0,
                 "rec_fps": 2,
@@ -112,6 +135,11 @@
             "height": 240,
             "fps": 4,
             "remote_fps": 1,
+            "registry": {
+                "reg_on": 0,
+                "entities": []
+            },
+            "alarm": 0,
             "recording": {
                 "rec_on": 2,
                 "rec_fps": 2,
@@ -132,6 +160,11 @@
             "height": 240,
             "fps": 4,
             "remote_fps": 1,
+            "registry": {
+                "reg_on": 0,
+                "entities": []
+            },
+            "alarm": 0,
             "recording": {
                 "rec_on": 2,
                 "rec_fps": 2,
@@ -152,6 +185,11 @@
             "height": 240,
             "fps": 4,
             "remote_fps": 1,
+            "registry": {
+                "reg_on": 0,
+                "entities": []
+            },
+            "alarm": 0,
             "recording": {
                 "rec_on": 0,
                 "rec_fps": 2,
@@ -172,6 +210,11 @@
             "height": 240,
             "fps": 4,
             "remote_fps": 1,
+            "registry": {
+                "reg_on": 0,
+                "entities": []
+            },
+            "alarm": 0,
             "recording": {
                 "rec_on": 0,
                 "rec_fps": 2,
@@ -192,6 +235,11 @@
             "height": 240,
             "fps": 4,
             "remote_fps": 1,
+            "registry": {
+                "reg_on": 0,
+                "entities": []
+            },
+            "alarm": 0,
             "recording": {
                 "rec_on": 0,
                 "rec_fps": 2,
@@ -212,8 +260,13 @@
             "height": 240,
             "fps": 4,
             "remote_fps": 1,
+            "registry": {
+                "reg_on": 0,
+                "entities": []
+            },
+            "alarm": 1,
             "recording": {
-                "rec_on": 0,
+                "rec_on": 1,
                 "rec_fps": 2,
                 "change_detect": {
                     "pixel_limit": 9,
@@ -232,6 +285,11 @@
             "height": 240,
             "fps": 4,
             "remote_fps": 1,
+            "registry": {
+                "reg_on": 0,
+                "entities": []
+            },
+            "alarm": 0,
             "recording": {
                 "rec_on": 0,
                 "rec_fps": 2,
@@ -252,6 +310,11 @@
             "height": 240,
             "fps": 4,
             "remote_fps": 1,
+            "registry": {
+                "reg_on": 0,
+                "entities": []
+            },
+            "alarm": 0,
             "recording": {
                 "rec_on": 0,
                 "rec_fps": 2,
@@ -272,6 +335,11 @@
             "height": 240,
             "fps": 4,
             "remote_fps": 1,
+            "registry": {
+                "reg_on": 0,
+                "entities": []
+            },
+            "alarm": 1,
             "recording": {
                 "rec_on": 1,
                 "rec_fps": 2,
@@ -292,6 +360,11 @@
             "height": 240,
             "fps": 4,
             "remote_fps": 1,
+            "registry": {
+                "reg_on": 0,
+                "entities": []
+            },
+            "alarm": 0,
             "recording": {
                 "rec_on": 0,
                 "rec_fps": 2,
@@ -312,6 +385,11 @@
             "height": 240,
             "fps": 4,
             "remote_fps": 1,
+            "registry": {
+                "reg_on": 0,
+                "entities": []
+            },
+            "alarm": 0,
             "recording": {
                 "rec_on": 0,
                 "rec_fps": 2,
@@ -332,6 +410,11 @@
             "height": 240,
             "fps": 4,
             "remote_fps": 1,
+            "registry": {
+                "reg_on": 0,
+                "entities": []
+            },
+            "alarm": 0,
             "recording": {
                 "rec_on": 0,
                 "rec_fps": 2,
