--- a/app/package.json
+++ b/app/package.json
@@ -1,13 +1,14 @@
 {
   "name": "NodeMinder.js",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "node app"
   },
   "dependencies": {
-    "socket.io": "0.9.13",
-    "express": "3.0.6",
+    "socket.io": "0.9.x",
+    "redis": "0.8.x",
+    "express": "3.1.x",
     "jade": "*",
     "stylus": "*"
   }
