trying to grab some easycap frames

--- a/app/config/nodeminderjs.conf
+++ b/app/config/nodeminderjs.conf
@@ -1,7 +1,9 @@
 {
     "server": {
         "port": 8080,
-        "name": "01"
+        "name": "01",
+        "shared_memory_dir": "/dev/shm/",
+        "ffmpeg": "/usr/local/bin/ffmpeg"
     },
     "other_servers": [
         {
