grabbing frames from gv-800 and easycap but easycap freezing

--- a/app/config/nodeminderjs.conf
+++ b/app/config/nodeminderjs.conf
@@ -3,6 +3,8 @@
         "port": 8080,
         "name": "01",
         "shared_memory_dir": "/dev/shm/",
+        "custom_dir": "/var/nodeminderjs/custom/",
+        "custom_grid_dir": "/var/nodeminderjs/custom/grid/",
         "ffmpeg": "/usr/local/bin/ffmpeg"
     },
     "other_servers": [
@@ -13,10 +15,6 @@
     ],
     "events": {
         "dir": "/var/nodeminderjs/events/"
-    },
-    "custom": {
-        "dir":  "/var/nodeminderjs/custom/",
-        "grid": "/var/nodeminderjs/custom/grid/"
     },
     "registry": {
         "dir": "/var/nodeminderjs/registry/"
