--- a/app/config/nodeminderjs.conf
+++ b/app/config/nodeminderjs.conf
@@ -9,8 +9,8 @@
     },
     "other_servers": [
         {
-            "url": "http://192.168.1.181:4040/",
-            "name": "02"
+            "name": "02",
+            "url": "http://192.168.1.181:4040/"
         }
     ],
     "events": {
@@ -394,32 +394,11 @@
         },
         {
             "id": "17",
+            "disabled": 1,
             "descr": "Easycap 01",
             "driver": {
                 "id": "easycap",
                 "input": 1
-            },
-            "fps": {
-                "local": 4,
-                "remote": 1
-            },
-            "change_detect": {
-                "on": 1,
-                "pixel_limit": 12,
-                "image_limit": 6,
-                "frames_int": 1
-            },
-            "recording": {
-                "on": 0,
-                "fps": 1
-            }
-        },
-        {
-            "id": "18",
-            "descr": "Easycap 02",
-            "driver": {
-                "id": "easycap",
-                "input": 2
             },
             "fps": {
                 "local": 4,
