--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ app/public/stylesheets/*.css
 app/public/images/thumbnails/*.jpg
 app/driver/nmjs-gv-800
 app/driver/nmjs-gv-800-read
+app/change/change
 
