userptr streaming ok but instable

--- a/app/config/nodeminderjs.conf
+++ b/app/config/nodeminderjs.conf
@@ -2,7 +2,7 @@
     "server": {
         "port": 8080,
         "name": "01",
-        "shared_memory_dir": "/dev/shm/",
+        "shm_dir": "/dev/shm/",
         "custom_dir": "/var/nodeminderjs/custom/",
         "custom_grid_dir": "/var/nodeminderjs/custom/grid/",
         "ffmpeg": "/usr/local/bin/ffmpeg"
@@ -38,8 +38,8 @@
             },
             "change_detect": {
                 "on": 1,
-                "pixel_limit": 16,
-                "image_limit": 14,
+                "pixel_limit": 17,
+                "image_limit": 13,
                 "frames_int": 1
             },
             "recording": {
@@ -60,9 +60,9 @@
                 "remote": 1
             },
             "change_detect": {
-                "on": 0,
-                "pixel_limit": 12,
-                "image_limit": 7,
+                "on": 1,
+                "pixel_limit": 11,
+                "image_limit": 8,
                 "frames_int": 1
             },
             "recording": {
@@ -130,9 +130,9 @@
             },
             "change_detect": {
                 "on": 1,
-                "pixel_limit": 15,
-                "image_limit": 10,
-                "frames_int": 1
+                "pixel_limit": 17,
+                "image_limit": 13,
+                "frames_int": 2
             },
             "recording": {
                 "on": 2,
@@ -175,9 +175,9 @@
                 "remote": 1
             },
             "change_detect": {
-                "on": 0,
-                "pixel_limit": -1,
-                "image_limit": -1,
+                "on": 1,
+                "pixel_limit": 16,
+                "image_limit": 12,
                 "frames_int": 1
             },
             "recording": {
@@ -314,8 +314,8 @@
             },
             "change_detect": {
                 "on": 1,
-                "pixel_limit": 11,
-                "image_limit": 7,
+                "pixel_limit": 12,
+                "image_limit": 8,
                 "frames_int": 1
             },
             "recording": {
@@ -336,9 +336,9 @@
                 "remote": 1
             },
             "change_detect": {
-                "on": 0,
-                "pixel_limit": -1,
-                "image_limit": -1,
+                "on": 1,
+                "pixel_limit": 12,
+                "image_limit": 10,
                 "frames_int": 1
             },
             "recording": {
