--- a/app/driver/Makefile
+++ b/app/driver/Makefile
@@ -3,7 +3,7 @@
 #CFLAGS += -Wall -O2 -lrt
 CFLAGS += -Wall -O2
 
-all: nmjs-gv-800 nmjs-gv-800-read
+all: nmjs-gv-800 nmjs-gv-800-read nmjs-gv-800-usrp
 
 nmjs-gv-800: gv-800.c
 	gcc -w gv-800.c -o nmjs-gv-800 $(CFLAGS)
@@ -11,4 +11,6 @@ nmjs-gv-800: gv-800.c
 nmjs-gv-800-read: gv-800-read.c
 	gcc -w gv-800-read.c -o nmjs-gv-800-read $(CFLAGS)
 
+nmjs-gv-800-usrp: gv-800-usrp.c
+	gcc -w gv-800-usrp.c -o nmjs-gv-800-usrp $(CFLAGS)
 
