--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ app/public/stylesheets/*.css
 app/public/images/thumbnails/*.jpg
 app/driver/nmjs-gv-800
 app/driver/nmjs-gv-800-read
+app/driver/nmjs-gv-800-usrp
 app/change/change
 
